Request print added to seat template.

--- a/source/app/templates/seatmap.html
+++ b/source/app/templates/seatmap.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Content</h1>
-    <p>Request: {{ data }}</p>
+    <p>Request: {{ request }}</p>
     <p>Items: {{ data }}</p>
 </body>
 </html>
