--- a/source/app/templates/seatmap.html
+++ b/source/app/templates/seatmap.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Seats</title>
-    <link href="{{ url_for('static', path='/static/styles.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
 </head>
 <body>
     <h1>Content</h1>
