--- a/source/app/templates/seatmap.html
+++ b/source/app/templates/seatmap.html
@@ -1,7 +1,79 @@
 <html>
 <head>
     <title>Seats</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <style>
+        // Bootstrapping CSS
+        //
+        // Sources:
+        // - https://uicookies.com/bootstrap-datatable/
+        // - https://codepen.io/alexerlandsson/pen/mPWgpO
+
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            margin: 0;
+            background: linear-gradient(45deg, #49a09d, #5f2c82);
+            font-family: sans-serif;
+            font-weight: 100;
+        }
+
+        .container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        table {
+            width: 800px;
+            border-collapse: collapse;
+            overflow: hidden;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        }
+
+        th,
+        td {
+            padding: 15px;
+            background-color: rgba(255,255,255,0.2);
+            color: #fff;
+        }
+
+        th {
+            text-align: left;
+        }
+
+        thead {
+            th {
+                background-color: #55608f;
+            }
+        }
+
+        tbody {
+            tr {
+                &:hover {
+                    background-color: rgba(255,255,255,0.3);
+                }
+            }
+            td {
+                position: relative;
+                &:hover {
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: -9999px;
+                        bottom: -9999px;
+                        background-color: rgba(255,255,255,0.2);
+                        z-index: -1;
+                    }
+                }
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Content</h1>
@@ -56,6 +128,14 @@
                     <td>Cell 5</td>
                 </tr>
             </tbody>
+        </table>
+    </div>
+
+    <div class="container">
+        <table>
+            <thead>
+
+            </thead>
         </table>
     </div>
 </body>
