Static mount removed. Unique values provided to templates.

--- a/source/app/templates/seatmap.html
+++ b/source/app/templates/seatmap.html
@@ -76,8 +76,7 @@
     </style>
 </head>
 <body>
-    <h1>Content</h1>
-    <p>Request: {{ request }}</p>
+    <h1>Map</h1>
     <p>Items: {{ data }}</p>
 
     <div class="container">
