--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -4,8 +4,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    {% for page in pages %}
-    <p>{{page.link}}</p>
-    {% endfor %}
+    <ul class="nav justify-content-center">
+        {% for page in pages %}
+        <li class="nav-item">
+          <a class="nav-link" href={{ page.link }}>{{ page.name }}</a>
+        </li>
+        {% endfor %}
+      </ul>
 </body>
 </html>
