--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+    <div class="text-center">
+        <img src="/app/static/wedding.png" class="rounded" alt="program">
+    </div>
+
     <ul class="nav justify-content-center">
         {% for page in pages %}
         <li class="nav-item">
