Static path corrected.

--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="text-center">
-        <img src="/app/static/wedding.png" class="rounded" alt="program">
+        <img src="/static/wedding.png" class="rounded" alt="program">
     </div>
 
     <ul class="nav justify-content-center">
