--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-    <title>Map</title>
+    <title>Pääsivu</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <div class="text-center" style="padding-top:25px;">
-        <img src="/static/wedding.png" class="rounded" alt="program" style="max-width: 500; width: 80%;">
+        <img src="/static/wedding.jpg" class="rounded" alt="program" style="max-width: 500; width: 80%;">
     </div>
 
     <ul class="nav justify-content-center">
