Paddings added to imgs-

--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="text-center" style="padding-top:25px;">
-        <img src="/static/wedding.jpg" class="rounded" alt="program" style="max-width: 500; width: 80%;">
+        <img src="/static/wedding.jpg" class="rounded" alt="program" style="max-width: 500; width: 80%; padding-top: 25px; padding-bottom: 25px;">
     </div>
 
     <ul class="nav justify-content-center">
