--- a/source/app/templates/program.html
+++ b/source/app/templates/program.html
@@ -3,7 +3,7 @@
     <title>Ohjelma</title>
 </head>
 <body>
-    <div class="text-center" style="padding-top:25px;">
+    <div class="text-center">
         <img src="/static/wedding.png" class="rounded" alt="program">
     </div>
 </body>
