--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -2,6 +2,11 @@
 <head>
     <title>Pääsivu</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style type="text/css">
+      html body {
+          background-color: rgb(211, 211, 211);
+      }
+    </style>
 </head>
 <body>
     <div class="text-center" style="padding-top:25px;">
