Meeting time added.

--- a/source/app/templates/index.html
+++ b/source/app/templates/index.html
@@ -13,6 +13,8 @@
         <img src="/static/wedding.jpg" class="rounded" alt="program" style="max-width: 1000; width: 80%; padding-top: 25px; padding-bottom: 25px;">
     </div>
 
+    <p>Kokoonnumme hääpaikalla klo 14:15</p>
+
     <div style="background-color: rgb(224,224,224); border: 2px outset; text-align: center;">
       <ul class="nav justify-content-center">
         {% for page in pages %}
